--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "angular-bootstrap": "~0.13.0",
     "moment": "~2.10.3",
     "animate.css": "~3.3.0",
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
+    "angular-translate": "~2.7.0",
+    "angular-translate-loader-url": "~2.7.0",
+    "angular-translate-loader-static-files": "~2.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
