--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular": "~1.4.0",
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
-    "angular-translate-loader-static-files": "~2.7.0"
+    "angular-translate-loader-static-files": "~2.7.0",
+    "ng-file-upload": "~5.0.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
