--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
     "angular-translate-loader-static-files": "~2.7.0",
-    "ng-file-upload": "~5.0.9"
+    "ng-file-upload": "~5.0.9",
+    "angular-google-maps": "~2.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
