--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,16 @@
   "name": "bg",
   "version": "0.0.0",
   "dependencies": {
-    "angular-animate": "~1.4.0",
-    "angular-sanitize": "~1.4.0",
+    "angular-animate": "1.3.17",
+    "angular-sanitize": "1.3.17",
     "jquery": "~2.1.4",
-    "angular-resource": "~1.4.0",
+    "angular-resource": "1.3.17",
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass-official": "~3.3.4",
     "angular-bootstrap": "~0.13.0",
     "moment": "~2.10.3",
     "animate.css": "~3.3.0",
-    "angular": "~1.4.0",
+    "angular": "1.3.17",
     "angular-translate": "~2.7.0",
     "angular-translate-loader-url": "~2.7.0",
     "angular-translate-loader-static-files": "~2.7.0",
@@ -22,7 +22,6 @@
     "angular-mocks": "~1.4.0"
   },
   "resolutions": {
-    "jquery": "~2.1.4",
-    "angular": "~1.4.0"
+    "jquery": "~2.1.4"
   }
 }
