--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "angular-translate-loader-url": "~2.7.0",
     "angular-translate-loader-static-files": "~2.7.0",
     "ng-file-upload": "~5.0.9",
-    "angular-google-maps": "~2.1.5"
+    "ngmap": "~1.8.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
