--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-mocks": "~1.4.0"
   },
   "resolutions": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular": "1.3.17"
   }
 }
