--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-translate-loader-static-files": "~2.7.0",
     "ng-file-upload": "~5.0.9",
     "ngmap": "~1.8.1",
-    "ng-tags-input": "~3.0.0"
+    "ng-tags-input": "~3.0.0",
+    "angucomplete-alt": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
