--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "ng-file-upload": "~5.0.9",
     "ngmap": "~1.8.1",
     "ng-tags-input": "~3.0.0",
-    "angucomplete-alt": "~1.1.0"
+    "angucomplete-alt": "~1.1.0",
+    "angular-toggle-switch": "~1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
