--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "ngmap": "~1.8.1",
     "ng-tags-input": "~3.0.0",
     "angucomplete-alt": "~1.1.0",
-    "angular-toggle-switch": "~1.3.0"
+    "angular-toggle-switch": "~1.3.0",
+    "braintree-angular": "~1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
