--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "ng-tags-input": "~3.0.0",
     "angucomplete-alt": "~1.1.0",
     "angular-toggle-switch": "~1.3.0",
-    "braintree-angular": "~1.3.1"
+    "braintree-angular": "~1.3.1",
+    "angular-ladda": "~0.3.4",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
