--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-toggle-switch": "~1.3.0",
     "braintree-angular": "~1.3.1",
     "angular-ladda": "~0.3.4",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angular-daterangepicker": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
