--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "braintree-angular": "~1.3.1",
     "angular-ladda": "~0.3.4",
     "angular-loading-bar": "~0.8.0",
-    "angular-daterangepicker": "~0.2.2"
+    "angular-daterangepicker": "~0.2.2",
+    "satellizer": "^0.14.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
