--- a/bower.json
+++ b/bower.json
@@ -23,14 +23,15 @@
     "braintree-angular": "~1.3.1",
     "angular-ladda": "~0.3.4",
     "angular-loading-bar": "~0.8.0",
-    "angular-daterangepicker": "~0.2.2",
-    "satellizer": "^0.14.0"
+    "satellizer": "^0.14.0",
+    "ng-bs-daterangepicker": "^0.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
   },
   "resolutions": {
     "jquery": "~2.1.4",
-    "angular": "1.4.0"
+    "angular": "1.4.0",
+    "moment": "~2.10.3"
   }
 }
